--- a/public/geolocation.html
+++ b/public/geolocation.html
@@ -54,9 +54,14 @@
                 </li>
             </ul>
         </nav>
-        <div class="container"></div>
+        <div>
+            <a href="notCached.html">NE CACHESIRANI ENDPOINT</a>
+            <br/>
+            <button id="askButton">Ask for location</button>
+            <div id="target"></div>
+        </div>
     </main>
-    <script src="js/app.js"></script>
+    <script src="js/geolocation.js"></script>
 </body>
 
 </html>
